syntax = "proto3";

package satelit;
option  go_package = ".;satelit";

service SatelitDatabase {
  rpc GetLease(GetLeaseRequest) returns (GetLeaseResponse) {}
}

message Lease {
  string mac_address     = 1;
  string ip              = 2;
  string gateway         = 3;
  string dns_server      = 4;
  string metadata_server = 5;
}

message GetLeaseRequest {
  string mac_address = 1;
}

message GetLeaseResponse {
  Lease lease = 1;
}